public abstract class Menu {

    // Attributes

    // ________________________________________________________

    public Menu(){

    }

    // ________________________________________________________

    public abstract void startSession();

    // ________________________________________________________

    public abstract void endSession();

    // ________________________________________________________

    public abstract void runMenuLoop();

}
